--- a/install_java.yml
+++ b/install_java.yml
@@ -12,7 +12,7 @@
         dest: C:\Temp\jdk-21_windows-x64_bin.exe
 
     - name: Install Java 21
-      win_command: C:\Temp\jdk-21_windows-x64_bin.exe /s
+      win_shell: C:\Temp\jdk-21_windows-x64_bin.exe /s
 
     - name: Set JAVA_HOME environment variable
       win_environment:
